--- a/vm_config.json
+++ b/vm_config.json
@@ -1,7 +1,7 @@
 {
   "boot-source": {
     "kernel_image_path": "vmlinux.bin",
-    "boot_args": "console=ttyS0 reboot=k panic=1 pci=off",
+    "boot_args": "console=ttyS0 reboot=k panic=1 pci=off ip=172.16.0.2:::255.255.255.0::eth0:off",
     "initrd_path": null
   },
   "drives": [
@@ -22,8 +22,13 @@
     "smt": false,
     "track_dirty_pages": false
   },
+  "network-interfaces": [
+    {
+      "iface_id": "eth0",
+      "host_dev_name": "tap0"
+    }
+  ],
   "balloon": null,
-  "network-interfaces": [],
   "vsock": null,
   "logger": null,
   "metrics": null,
