--- a/vm_config.json
+++ b/vm_config.json
@@ -1,16 +1,16 @@
 {
   "boot-source": {
     "kernel_image_path": "vmlinux.bin",
-    "boot_args": "console=ttyS0 reboot=k panic=1 pci=off ip=172.16.0.2:::255.255.255.0::eth0:off",
+    "boot_args": "console=ttyS0 reboot=k panic=1 pci=off ip=172.16.0.2:::255.255.255.0::eth0:off overlay_root=ram init=/sbin/overlay-init",
     "initrd_path": null
   },
   "drives": [
     {
       "drive_id": "rootfs",
-      "path_on_host": "bionic.rootfs.ext4",
+      "path_on_host": "squash.img",
       "is_root_device": true,
       "partuuid": null,
-      "is_read_only": false,
+      "is_read_only": true,
       "cache_type": "Unsafe",
       "io_engine": "Sync",
       "rate_limiter": null
